<resources>
    <string name="app_name">sample-commons</string>

    <string name="transaction_type">Transaction type</string>
    <string name="flow_name">Flow name</string>
    <string name="flow_type">Flow type</string>
    <string name="request_type">Request type</string>
    <string name="request_flow">Request flow</string>
    <string name="overall_status">All transactions approved</string>
    <string name="outcome">Outcome</string>
    <string name="outcome_message">Outcome message</string>
    <string name="failure_reason">Failure reason</string>
    <string name="payment_app_used">Payment service used</string>
    <string name="num_transactions">Number of transactions</string>

    <string name="base_amount">Base amount</string>
    <string name="currency">Currency</string>
    <string name="total_amount">Total amount</string>

    <string name="token_value">Token value</string>
    <string name="token_source">Token source</string>
    <string name="token_algo">Token algorithm</string>

    <string name="amount_details">Amount details</string>
    <string name="token_details">Token details</string>
    <string name="customer_details">Customer details</string>

    <string name="full_name">Full name</string>
    <string name="id">Id</string>

    <string name="transaction_id">Transaction id</string>
    <string name="transaction_status">Transaction status</string>
    <string name="response_code">Response code</string>
    <string name="amount_charged">Amount charged</string>
    <string name="payment_type">Payment method</string>
    <string name="card_used">Card used</string>
    <string name="card_used_value">%1$s %2$s %3$s</string>

    <string name="customer">Customer</string>
    <string name="split_enabled">Split enabled</string>
    <string name="basket_name">Basket name</string>
    <string name="basket_total">Basket total</string>
    <string name="basket_num_items">Num unique items</string>
    <string name="overview">Overview</string>
    <string name="basket_title_no_count">Basket</string>
    <string name="basket_title_new_basket">New basket</string>
    <string name="basket_title">Basket #%1$d</string>
    <string name="item">Item</string>
    <string name="payment_stage">Payment stage</string>
    <string name="expiry_date">Expiry date</string>
    <string name="card_details">Card details</string>
    <string name="request_overview">Request overview</string>
    <string name="masked_pan">Masked PAN</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="payment_model_overview">Payment model data</string>
    <string name="request_model_overview">Request model data</string>
    <string name="txn_request_model_overview">TransactionRequest model data</string>
    <string name="split_request_model_overview">SplitRequest model data</string>
    <string name="txn_summary_model_overview">TransactionSummary model data</string>
    <string name="payment_response_model_overview">PaymentResponse model data</string>
    <string name="other_data">Other data</string>
    <string name="card_response_model_overview">CardResponse model data</string>
    <string name="payment_method">Payment method</string>
    <string name="cancel_requested">Cancel requested</string>
    <string name="split_requested">Split requested</string>
    <string name="flow_response_model_overview">FlowResponse model data</string>
    <string name="updated_request_amounts">Updated request amounts</string>
    <string name="paid_amounts">Paid amounts</string>
    <string name="additional_request_data">Additional request data</string>
    <string name="payment_references">Payment references</string>
    <string name="failure_message">Failure message</string>
    <string name="all_txn_approved">All transactions approved</string>
    <string name="is_split">Split transactions</string>
    <string name="total_amount_requested">Total amount requested</string>
    <string name="total_amount_processed">Total amount processed</string>
    <string name="num_responses">Num transaction responses</string>
    <string name="num_baskets">Number of baskets</string>
    <string name="transaction_index">Transaction #%1$d</string>
    <string name="response_index">Response #%1$d</string>
    <string name="success">SUCCESS</string>
    <string name="failed">FAILURE</string>
    <string name="response_model_overview">Response model data</string>
    <string name="general_data">General data</string>
    <string name="model_overview">Model overview</string>
    <string name="payment_id">Payment id</string>
    <string name="help">Show help</string>
    <string name="view_request">View request</string>
    <string name="view_model">View model</string>
    <string name="flow_stage">Flow stage</string>
    <string name="flow_stages">Flow stages</string>
    <string name="payment_initiation">Payment initiation</string>
    <string name="pre_flow">Pre flow</string>
    <string name="split">Split</string>
    <string name="pre_transaction">Pre transaction</string>
    <string name="payment_card_reading">Payment card reading</string>
    <string name="post_card_reading">Post card reading</string>
    <string name="transaction_processing">Transaction processing</string>
    <string name="post_transaction">Post transaction</string>
    <string name="post_flow">Post flow</string>
    <string name="payment_response">Payment response</string>
    <string name="what_is_this">What is this?</string>
    <string name="icon_legend">Icon legend</string>
    <string name="view_flow_stages">View flow stages</string>
    <string name="view_incoming_request">View incoming request</string>
    <string name="view_configured_data">View configured data</string>
    <string name="no_model_data_available">No model data available</string>
    <string name="response_data">Response data</string>
    <string name="basket_primary">Primary basket</string>

</resources>
