<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help_outline_white_24dp"
            android:title="@string/help"
            app:showAsAction="always"/>

    <item
            android:id="@+id/menu_flow_stage"
            android:icon="@drawable/ic_flow_stage"
            android:title="@string/flow_stages"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_view_request"
            android:icon="@drawable/ic_description_white_24dp"
            android:title="@string/view_request"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/menu_view_model"
            android:icon="@drawable/ic_code_white_24dp"
            android:title="@string/view_model"
            app:showAsAction="ifRoom"/>

</menu>