<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/BaseDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:text="@string/flow_stages"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_large"
        android:paddingTop="@dimen/margin_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_large"
            android:paddingRight="@dimen/margin_large">

            <TextView
                android:id="@+id/payment_initiation"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_first_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/payment_initiation"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_first_offset"/>

            <TextView
                android:id="@+id/pre_flow"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_second_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/pre_flow"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_second_offset"/>

            <TextView
                android:id="@+id/split"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_third_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/split"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_third_offset"/>

            <TextView
                android:id="@+id/pre_payment"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_third_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/pre_transaction"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_third_offset"/>

            <TextView
                android:id="@+id/card_reading"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_third_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/payment_card_reading"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_third_offset"/>

            <TextView
                android:id="@+id/post_card_reading"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_third_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/post_card_reading"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_third_offset"/>

            <TextView
                android:id="@+id/transaction_processing"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_third_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/transaction_processing"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_third_offset"/>

            <TextView
                android:id="@+id/post_payment"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_third_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/post_transaction"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_second_offset"/>

            <TextView
                android:id="@+id/post_flow"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_second_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/post_flow"/>

            <View
                style="@style/FlowStageArrow"
                android:layout_marginLeft="@dimen/flow_arrow_first_offset"/>

            <TextView
                android:id="@+id/payment_response"
                style="@style/FlowStage"
                android:layout_marginLeft="@dimen/flow_stage_first_offset"
                android:layout_marginRight="@dimen/flow_stage_margin_right"
                android:text="@string/payment_response"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>